--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -1,7 +1,8 @@
 /*$baseFontFamily: Oxygen;
 @import url() */
+$btnPrimaryBackground: green;
 $navbarBackgroundHighlight: white;
-$navbarBackground: green;
+$navbarBackground: white;
 
 @import 'bootstrap';
 
@@ -10,6 +11,11 @@ body {
 }
 
 @import 'bootstrap-responsive';
+
+.navbar-inner {
+	@include box-shadow (none !important);
+	border: 0;
+}
 
 .footer {
 	margin-top: 50px;
